adding welcome blurb

--- a/quick-start.html
+++ b/quick-start.html
@@ -4,6 +4,8 @@
             <div class="brand">QuickStart</div>
         </div>
     </div>
+    <div class="alert alert-warning">This is the fastest way to get started building an app.  You can always click on the apps tab to the left to view or modify the details of your app.
+    </div>
     <div ng-show="step == 1">Give your app a name :&nbsp;
         <input type="text" class="input-large" data-ng-model="app.api_name">
 
