working from Bill

--- a/applications.html
+++ b/applications.html
@@ -77,7 +77,7 @@
                         <div class="options">
                             <label><i class="icon-hdd icon-2x"></i>&nbsp;<b>Where will this app live?</b></label>
                             <input type="radio" ng-model="app.is_url_external" value='0'/>&nbsp;&nbsp;Use our default app storage service or one of your own.
-                            <br/><input type="radio" ng-model="app.is_url_external" value='-1'/>&nbsp;&nbsp;On a native device / other remote client(desktop).
+                            <br/><input type="radio" ng-model="app.is_url_external" value='-1'/>&nbsp;&nbsp;On a native device or remote client / desktop.
                             <br/><input type="radio" ng-model="app.is_url_external" value='1'/>&nbsp;&nbsp;I will just supply a URL to point to my application.
 
 
