possible scrollbar fix for static docs

--- a/quick-start.html
+++ b/quick-start.html
@@ -81,7 +81,8 @@
         <div ng-show="!app.native"><h3>The DreamFactory Javascript SDK</h3><br/>
             <p style="font-size:2em">What's in the SDK?</p>
             <p>This SDK is a convenience wrapper for all the methods you can use with our REST API.  It's also a LIVE API, meaning any changes you make to the
-                Services on your DSP will be available the next time your application is loaded. We've created a version for you with your endpoint and api key already inside, so no configuration needed, just download and start coding.  You can see the df object in your debugger, and underneath df.apis are all the resources and methods available to you.</p>
+                Services on your DSP will be available the next time your application is loaded. We've created a version for you with your endpoint and api key already inside, so no configuration needed, just download and start coding.
+                <p>You can see the df object in your debugger, and underneath df.apis are all the resources and methods available to you by opening up the DOM inspection tab and scrolling down to the df object. It's a global object so its attached to the window object.</p></p>
             <p>
                 If you'd like to use our javascript-sdk, which we've just created for this DSP and app, click the
                 download button below.
