--- a/swagger.html
+++ b/swagger.html
@@ -1,4 +1,4 @@
-<div id="swagctrl" class="well" ng-controller="SwaggerCtrl">
+<div id="swagctrl" class="well main" ng-controller="SwaggerCtrl">
     <div class="navbar" id="swagbar">
         <div class="navbar-inner">
             <div class="brand">API / SDK</div>
