--- a/quick-start.html
+++ b/quick-start.html
@@ -82,7 +82,7 @@
             <p style="font-size:2em">What's in the SDK?</p>
             <p>This SDK is a convenience wrapper for all the methods you can use with our REST API.  It's also a LIVE API, meaning any changes you make to the
                 Services on your DSP will be available the next time your application is loaded. We've created a version for you with your endpoint and api key already inside, so no configuration needed, just download and start coding.
-                <p>You can see the df object in your debugger, and underneath df.apis are all the resources and methods available to you by opening up the DOM inspection tab and scrolling down to the df object. It's a global object so its attached to the window object.</p></p>
+                <p>You can see the df object in your debugger, and underneath df.apis are all the resources and methods available to you by opening up the DOM inspection tab and scrolling down to the df object. It's a global object so its attached to the window object.  This means, using Chrome's DevTools, you can simply open the console and start typing "window.df.apis" and its typeahead will show all the methods and properties.</p></p>
             <p>
                 If you'd like to use our javascript-sdk, which we've just created for this DSP and app, click the
                 download button below.
