--- a/applications.html
+++ b/applications.html
@@ -53,7 +53,7 @@
             <div class="alert alert-info" ng-show="action=='Create' || action=='Update'">
                 <li class="icon-info-sign"></li>
                 DreamFactory makes it easy to build and deploy applications by providing all the back-end
-                infrastructure. Use this tab to manage your apps. You may also download a Javascript SDK by clicking the button below.<br/>
+                infrastructure. Use this tab to manage your apps. You may also download a customized Javascript SDK once your app is created.<br/>
                 <a data-ng-show = "action == 'Update'" data-ng-click="downloadSDK()" class="btn btn-small">
                     <li class="icon-download-alt"></li>
                     Download JS SDK
