added return, removed sdk text

--- a/quick-start.html
+++ b/quick-start.html
@@ -80,7 +80,7 @@
             <p>
                 You can return to the Admin Console at any time and explore the other tabs at left to host your application, manage users, assign roles, create schema, and connect external services!
             </p>
-            <div ng-show="!app.native"><h3>The DreamFactory Javascript SDK</h3><br/>
+            <div ng-show="!app.native"><br/>
                 <p style="font-size:2em">What's in the SDK?</p>
                 <p>This SDK is a convenience wrapper for all the methods you can use with our REST API.  It's also a LIVE API, meaning any changes you make to the
                     Services on your DSP will be available the next time your application is loaded. We've created a version for you with your endpoint and api key already inside, so no configuration needed, just download and start coding.
