--- a/import.html
+++ b/import.html
@@ -13,21 +13,17 @@
             <input id="urlInput" type="text" name="url" style="width:50%;"/>&nbsp;<button ng-click='importPackageUrl()' class="btn btn-primary">Import</button><br/>
             <div>
                 <br/>
-                <p>Sample apps on https://github.com/dreamfactorysoftware:</p>
-                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-helloworld/raw/master/helloworld.dfpkg')">Hello World</a>
-                - A tiny sample application showing how to make a single RESTful call to your DreamFactory Services Platform (DSP).<br/>
+                <p>Sample apps on <a href="https://github.com/dreamfactorysoftware">github/dreamfactorysoftware</a>:</p>
+                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-jquery/raw/master/todojquery.dfpkg')">Todo List jQuery</a>
+                - Learn how to authenticate and make CRUD calls to your DSP using the JavaScript SDK.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-angular/raw/master/todoangular.dfpkg')">Todo List AngularJS</a>
-                - A simple AngularJS application showing how to create, update, and delete database records on your DSP.<br/>
-                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-jquery/raw/master/todojquery.dfpkg')">Todo List jQuery w/ SDK</a>
-                - A simple jQuery application showing how to create, update, and delete database records on your DSP using the DreamFactory javascript SDK.<br/>
+                - The Todo List app with AngularJS.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-sencha/raw/master/todosencha.dfpkg')">Todo List Sencha</a>
-                - A simple Sencha application (phone/tablet only) showing how to create, update, and delete database records on your DSP.<br/>
+                - The Todo List app with Sencha Touch (phone/tablet only).<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
                 - Another sample application showing how to perform CRUD operations on your DSP.<br/>
-                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-swagger/raw/master/swagger.dfpkg')">Live API Docs</a>
-                - Live API documentation for the DreamFactory Services Platform, built with Swagger.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-address-book/raw/master/add_min.dfpkg')">Address Book</a>
-                - An address book for mobile and desktop written by Modus Create. Based on Ext JS and Sencha Touch 2.
+                - An address book for mobile and desktop written by Modus Create. Based on Sencha Touch and Ext JS.
             </div>
         </form>
         <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
