--- a/quick-start.html
+++ b/quick-start.html
@@ -49,7 +49,7 @@
     <br/>
     <input type="radio" value=0 data-ng-model="app.storage_service_id"> On my local computer (edit code on my
     desktop)<br/>
-    <input type="radio" value=1 data-ng-model="app.storage_service_id"> Here on the in the Admin Console(edit code in my
+    <input type="radio" value=1 data-ng-model="app.storage_service_id"> Here in the Admin Console (edit code in my
     browser)<br/><br/>
 
     <div class="btn-group">
