--- a/index.html
+++ b/index.html
@@ -25,31 +25,10 @@
         </td>
     </tr>
 </table>
-<script type="text/javascript">
-    (function() {
-        var method;
-        var noop = function () {};
-        var methods = [
-            'assert', 'clear', 'count', 'debug', 'dir', 'dirxml', 'error',
-            'exception', 'group', 'groupCollapsed', 'groupEnd', 'info', 'log',
-            'markTimeline', 'profile', 'profileEnd', 'table', 'time', 'timeEnd',
-            'timeStamp', 'trace', 'warn'
-        ];
-        var length = methods.length;
-        var console = (window.console = window.console || {});
 
-        while (length--) {
-            method = methods[length];
-
-            // Only stub undefined methods.
-            if (!console[method]) {
-                console[method] = noop;
-            }
-        }
-    }());
-</script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.3/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.min.js"></script>
 <script src="/public/web-core/js/utils.js"></script>
 <script src="js/ng-grid/ng-grid-1.8.0.js"></script>
 <script src="js/controllers/quickstartctrl.js"></script>
@@ -68,7 +47,7 @@
 <script src="js/json2.js"></script>
 <script src="js/jsonlint.js"></script>
 <script src="js/app.js"></script>
-<script src="js/resource.js"></script>
+
 <script src="/public/web-core/js/pnotify/pnotify.js"></script>
 <link rel="stylesheet" href="/public/web-core/js/pnotify/pnotify.css" type="text/css" />
 
